--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width"> 
+    <!-- CSS Compatible with different browsers -->
+    <link href="vendors/css/normalize.css" rel="stylesheet" type="text/css">
+    <!-- CSS Grid -->
+    <link href="vendors/css/grid.css" rel="stylesheet" type="text/css">
+     <!-- CSS -->
+    <link href="resources/css/style.css" rel="stylesheet" type="text/css">
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
+    <title>Dine-In-Dash | Healthy Does Not Mean Boring</title>
   </head>
+  
   <body>
+    <div class="row">
+      <h1>Dine-In-Dash</h1>
+    </div>
+    
   </body>
 </html>
