--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width"> 
-    <!-- CSS Compatible with different browsers -->
+    <!-- CSS Compatible with Different Browsers -->
     <link href="vendors/css/normalize.css" rel="stylesheet" type="text/css">
     <!-- CSS Grid -->
     <link href="vendors/css/grid.css" rel="stylesheet" type="text/css">
@@ -16,9 +16,14 @@
   </head>
   
   <body>
-    <div class="row">
-      <h1>Dine-In-Dash</h1>
-    </div>
+    <!-- Header -->
+    <header>
+      <div class="hero-text-box">
+        <h1>Goodbye junk food. Hello super healthy meals.</h1>
+        <a href="#">I’m hungry</a>
+        <a href="#">Show me more</a>
+      </div>
+    </header>
     
   </body>
 </html>
