--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">    
     <title>Dine-In-Dash | Healthy Does Not Mean Boring</title>
   </head>
   
@@ -19,9 +19,9 @@
     <!-- Header -->
     <header>
       <div class="hero-text-box">
-        <h1>Goodbye junk food. Hello super healthy meals.</h1>
-        <a href="#">I’m hungry</a>
-        <a href="#">Show me more</a>
+        <h1>Goodbye junk food.<br />Hello super healthy meals.</h1>
+        <a href="#" class="btn btn-full">I’m hungry</a>
+        <a href="#" class="btn btn-ghost">Show me more</a>
       </div>
     </header>
     
