added and styled logo and nav bar

--- a/index.html
+++ b/index.html
@@ -16,10 +16,23 @@
   </head>
   
   <body>
+    <!-- Navigation Bar -->
+    <nav>
+      <div class="row">
+        <img src="resources/css/img/logo-white.png" alt="Dine-In-Dash Logo" class="logo">
+        <ul class="main-nav">
+          <li><a href="#">Food delivery</a></li>
+          <li><a href="#">How it works</a></li>
+          <li><a href="#">Our cities</a></li>
+          <li><a href="#">Sign up</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <!-- Header -->
     <header>
       <div class="hero-text-box">
-        <h1>Goodbye junk food.<br />Hello super healthy meals.</h1>
+        <h1>Goodbye junk food.<br />Hello healthy meals.</h1>
         <a href="#" class="btn btn-full">I’m hungry</a>
         <a href="#" class="btn btn-ghost">Show me more</a>
       </div>
