--- a/index.html
+++ b/index.html
@@ -16,27 +16,74 @@
   </head>
   
   <body>
-    <!-- Navigation Bar -->
-    <nav>
-      <div class="row">
-        <img src="resources/css/img/logo-white.png" alt="Dine-In-Dash Logo" class="logo">
-        <ul class="main-nav">
-          <li><a href="#">Food delivery</a></li>
-          <li><a href="#">How it works</a></li>
-          <li><a href="#">Our cities</a></li>
-          <li><a href="#">Sign up</a></li>
-        </ul>
-      </div>
-    </nav>
+    <!-- Intro -->
+    <div class="backgroundImage">
+      <!-- Navigation Bar -->
+      <nav>
+        <div class="row">
+          <img src="resources/css/img/logo-white.png" alt="Dine-In-Dash Logo" class="logo">
+          <ul class="main-nav">
+            <li><a href="#">Food delivery</a></li>
+            <li><a href="#">How it works</a></li>
+            <li><a href="#">Our cities</a></li>
+            <li><a href="#">Sign up</a></li>
+          </ul>
+        </div>
+      </nav>
 
-    <!-- Header -->
-    <header>
-      <div class="hero-text-box">
-        <h1>Goodbye junk food.<br />Hello healthy meals.</h1>
-        <a href="#" class="btn btn-full">I’m hungry</a>
-        <a href="#" class="btn btn-ghost">Show me more</a>
-      </div>
-    </header>
+      <!-- Header -->
+      <header>
+        <div class="hero-text-box">
+          <h1>Goodbye junk food.<br />Hello healthy meals.</h1>
+          <a href="#" class="btn btn-full">I’m hungry</a>
+          <a href="#" class="btn btn-ghost">Show me more</a>
+        </div>
+      </header>
+    </div>
+
+    <!-- Features -->
+   <section class="section-features">
+     <div class="row">       
+       <!-- Features Header -->
+       <h1>Get food fast &mdash; not fast food.</h1>
+       <p class="long-copy">
+         Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
+       </p>
+     </div>
+      <!-- Features Detail -->
+     <div class="row">
+       <div class="col span-1-of-4">  
+         <ion-icon name="ios-infinite-outline"></ion-icon>       
+         <h2>Up to 365 days/year</h2>
+         <p>
+           Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
+         </p>
+       </div>
+       <div class="col span-1-of-4">
+         <ion-icon name="stopwatch-outline"></ion-icon>
+         <h2>Ready in 20 minutes</h2>
+         <p>
+           You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
+         </p>
+       </div>
+       <div class="col span-1-of-4">
+         <ion-icon name="nutrition-outline"></ion-icon>
+         <h2>100% organic</h2>
+         <p>
+           All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
+         </p>
+       </div>       
+       <div class="col span-1-of-4">
+         <ion-icon name="cart-outline"></ion-icon>
+         <h2>Order anything</h2>
+         <p>
+           We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
+         </p>
+       </div>
+     </div>
+   </section>
     
+    <!-- Ion Icons -->
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
   </body>
 </html>
