styled the features section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Header -->
       <header>
         <div class="hero-text-box">
-          <h1>Goodbye junk food.<br />Hello healthy meals.</h1>
+          <h1 class="intro-header">Goodbye junk food.<br />Hello healthy meals.</h1>
           <a href="#" class="btn btn-full">I’m hungry</a>
           <a href="#" class="btn btn-ghost">Show me more</a>
         </div>
@@ -45,37 +45,38 @@
    <section class="section-features">
      <div class="row">       
        <!-- Features Header -->
-       <h1>Get food fast &mdash; not fast food.</h1>
+       <h1 class="features-header">Get food fast &mdash; not fast food.</h1>
        <p class="long-copy">
-         Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
+         Hello, we’re Dine-In-Dash, your new premium food delivery service.<br>
+         You’re always busy and have no time for cooking, so let us take care of that. We’re really good at it, we promise!
        </p>
      </div>
       <!-- Features Detail -->
      <div class="row">
-       <div class="col span-1-of-4">  
-         <ion-icon name="ios-infinite-outline"></ion-icon>       
-         <h2>Up to 365 days/year</h2>
-         <p>
+       <div class="col span-1-of-4 box">  
+         <ion-icon name="infinite-outline" class="icon-big"></ion-icon>       
+         <h2 class="features-detail">Up to 365 days/year</h2>
+         <p class="features-paragraph">
            Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
          </p>
        </div>
-       <div class="col span-1-of-4">
-         <ion-icon name="stopwatch-outline"></ion-icon>
-         <h2>Ready in 20 minutes</h2>
-         <p>
+       <div class="col span-1-of-4 box">
+         <ion-icon name="stopwatch-outline" class="icon-big"></ion-icon>
+         <h2 class="features-detail">Ready in 20 minutes</h2>
+         <p class="features-paragraph">
            You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
          </p>
        </div>
-       <div class="col span-1-of-4">
-         <ion-icon name="nutrition-outline"></ion-icon>
-         <h2>100% organic</h2>
-         <p>
+       <div class="col span-1-of-4 box">
+         <ion-icon name="nutrition-outline" class="icon-big"></ion-icon>
+         <h2 class="features-detail">100% organic</h2>
+         <p class="features-paragraph">
            All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
-         </p>
+         </p class="features-paragraph">
        </div>       
-       <div class="col span-1-of-4">
-         <ion-icon name="cart-outline"></ion-icon>
-         <h2>Order anything</h2>
+       <div class="col span-1-of-4 box">
+         <ion-icon name="cart-outline" class="icon-big"></ion-icon>
+         <h2 class="features-detail">Order anything</h2>
          <p>
            We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
          </p>
