--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet"> 
+    <!-- Ion Icons -->
+    <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script> 
     <title>Dine-In-Dash | Healthy Does Not Mean Boring</title>
   </head>
   
@@ -21,7 +24,7 @@
       <!-- Navigation Bar -->
       <nav>
         <div class="row">
-          <img src="resources/css/img/logo-white.png" alt="Dine-In-Dash Logo" class="logo">
+          <img src="resources/img/logo-white.png" alt="Dine-In-Dash Logo" class="logo">
           <ul class="main-nav">
             <li><a href="#">Food delivery</a></li>
             <li><a href="#">How it works</a></li>
@@ -83,8 +86,66 @@
        </div>
      </div>
    </section>
-    
-    <!-- Ion Icons -->
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+
+   <!-- Favorite Meals -->
+  <section class="section-meals">
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+        </figure>
+      </li>
+    </ul>
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+        </figure>
+      </li>
+    </ul>
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/3.jpg" alt="Chicken breast steak with vegetables">
+        </figure>
+      </li>
+    </ul>
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/4.jpg" alt="Autumn pumpkin soup">
+        </figure>
+      </li>
+    </ul>
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
+        </figure>
+      </li>
+    </ul>
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+        </figure>
+      </li>
+    </ul>
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/7.jpg" alt="Burger with cheddar and bacon">
+        </figure>
+      </li>
+    </ul>
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/8.jpg" alt="Granola with cherries and strawberries">
+        </figure>
+      </li>
+    </ul>
+  </section>
+
   </body>
 </html>
