--- a/index.html
+++ b/index.html
@@ -147,5 +147,42 @@
     </ul>
   </section>
 
+  <!-- How It Works -->
+<section class="section-steps">
+  <div class="row">
+    <h1 class="section-steps-header">How it works &mdash; Simple as 1, 2, 3</h1>
+  </div>
+  <div class="row">
+    <div class="col span-1-of-2">
+      <img src="resources/img/app-iPhone2.png" alt="Dine-In-Dash app on Iphone" class="app-screen">
+    </div>
+    <div class="col span-1-of-2">
+      <div class="works-step">
+        <div>1</div>
+        <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+      </div>
+      <div class="works-step">
+        <div>2</div>
+        <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+      </div>
+      <div class="works-step">
+        <div>3</div>
+        <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+      </div>
+      <a href="#" class="btn-app"><img src="resources/img/download-app.svg" alt="App Store Button"></a>
+      <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Google Play Store Button"></a>
+    </div>
+  </div>
+</section>
+
   </body>
 </html>
+
+<!-- 
+  Section 3: How it works
+Title: How it works - Simple as 1, 2, 3
+
+1.	Choose the subscription plan that best fits your needs and sign up today.
+2.	Order your delicious meal using our mobile app or website. Or you can even call us!
+3.	Enjoy your meal after less than 20 minutes. See you the next time!
+ -->
