added text and style to how it works section

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         </figure>
       </li>
     </ul>
+    <ul class="clearfix"></ul>
   </section>
 
   <!-- How It Works -->
@@ -154,7 +155,7 @@
   </div>
   <div class="row">
     <div class="col span-1-of-2">
-      <img src="resources/img/app-iPhone2.png" alt="Dine-In-Dash app on Iphone" class="app-screen">
+      <img src="resources/img/app-iPhone.png" alt="Dine-In-Dash app on Iphone" class="app-screen">
     </div>
     <div class="col span-1-of-2">
       <div class="works-step">
