added text to cities section

--- a/index.html
+++ b/index.html
@@ -149,41 +149,105 @@
   </section>
 
   <!-- How It Works -->
-<section class="section-steps">
-  <div class="row">
-    <h1 class="section-steps-header">How it works &mdash; Simple as 1, 2, 3</h1>
-  </div>
-  <div class="row">
-    <div class="col span-1-of-2">
-      <img src="resources/img/app-iPhone.png" alt="Dine-In-Dash app on Iphone" class="app-screen">
+  <section class="section-steps">
+    <div class="row">
+      <h1 class="section-steps-header">How it works &mdash; Simple as 1, 2, 3</h1>
     </div>
-    <div class="col span-1-of-2">
-      <div class="works-step">
-        <div>1</div>
-        <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+    <div class="row">
+      <div class="col span-1-of-2">
+        <img src="resources/img/app-iPhone.png" alt="Dine-In-Dash app on Iphone" class="app-screen">
       </div>
-      <div class="works-step">
-        <div>2</div>
-        <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+      <div class="col span-1-of-2">
+        <div class="works-step">
+          <div>1</div>
+          <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+        </div>
+        <div class="works-step">
+          <div>2</div>
+          <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+        </div>
+        <div class="works-step">
+          <div>3</div>
+          <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+        </div>
+        <a href="#" class="btn-app"><img src="resources/img/download-app.svg" alt="App Store Button"></a>
+        <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Google Play Store Button"></a>
       </div>
-      <div class="works-step">
-        <div>3</div>
-        <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
-      </div>
-      <a href="#" class="btn-app"><img src="resources/img/download-app.svg" alt="App Store Button"></a>
-      <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Google Play Store Button"></a>
     </div>
-  </div>
+  </section>
+
+  <!-- Cities -->
+<section class="setion-cities box">
+  <div class="row">
+      <h1 class="section-cities-header">We're currently in these cities</h1>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-4">
+        <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
+        <h2>Lisbon</h2>
+        <div class="city-feature">
+          <ion-icon name="person-outline"></ion-icon>
+          1600+ happy eaters
+        </div>
+        <div class="city-feature">
+          <ion-icon name="restaurant-outline"></ion-icon>
+          60+ top chefs
+        </div>
+        <div class="city-feature">
+          <ion-icon name="logo-twitter"></ion-icon>
+          @dineindash_lisbon
+        </div>
+      </div>
+      <div class="col span-1-of-4">
+        <img src="resources/img/san-francisco.jpg" alt="San Francisco">
+        <h2>San Francisco</h2>
+        <div class="city-feature">
+          <ion-icon name="person-outline"></ion-icon>
+          3700+ happy eaters
+        </div>
+        <div class="city-feature">
+          <ion-icon name="restaurant-outline"></ion-icon>
+          160+ top chefs
+        </div>
+        <div class="city-feature">
+          <ion-icon name="logo-twitter"></ion-icon>
+          @dineindash_sf
+        </div>
+      </div>
+      <div class="col span-1-of-4">
+        <img src="resources/img/berlin.jpg" alt="Berlin">
+        <h2>Berlin</h2>
+        <div class="city-feature">
+          <ion-icon name="person-outline"></ion-icon>
+          2300+ happy eaters
+        </div>
+        <div class="city-feature">
+          <ion-icon name="restaurant-outline"></ion-icon>
+          110+ top chefs
+        </div>
+        <div class="city-feature">
+          <ion-icon name="logo-twitter"></ion-icon>
+          @dineindash_berlin
+        </div>
+      </div>
+      <div class="col span-1-of-4">
+        <img src="resources/img/london.jpg" alt="London">
+        <h2>London</h2>
+        <div class="city-feature">
+          <ion-icon name="person-outline"></ion-icon>
+          1200+ happy eaters
+        </div>
+        <div class="city-feature">
+          <ion-icon name="restaurant-outline"></ion-icon>
+          50+ top chefs
+        </div>
+        <div class="city-feature">
+          <ion-icon name="logo-twitter"></ion-icon>
+          @dineindash_london
+        </div>
+      </div>
+    </div>
 </section>
 
   </body>
 </html>
-
-<!-- 
-  Section 3: How it works
-Title: How it works - Simple as 1, 2, 3
-
-1.	Choose the subscription plan that best fits your needs and sign up today.
-2.	Order your delicious meal using our mobile app or website. Or you can even call us!
-3.	Enjoy your meal after less than 20 minutes. See you the next time!
- -->
