added styling to cities section

--- a/index.html
+++ b/index.html
@@ -177,72 +177,72 @@
   </section>
 
   <!-- Cities -->
-<section class="setion-cities box">
+<section class="setion-cities">
   <div class="row">
       <h1 class="section-cities-header">We're currently in these cities</h1>
     </div>
     <div class="row">
-      <div class="col span-1-of-4">
+      <div class="col span-1-of-4 box">
         <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
-        <h2>Lisbon</h2>
+        <h3 class="cities-detail">Lisbon</h3>
         <div class="city-feature">
-          <ion-icon name="person-outline"></ion-icon>
+          <ion-icon name="person-outline" class="icon-small"></ion-icon>
           1600+ happy eaters
         </div>
         <div class="city-feature">
-          <ion-icon name="restaurant-outline"></ion-icon>
+          <ion-icon name="restaurant-outline" class="icon-small"></ion-icon>
           60+ top chefs
         </div>
         <div class="city-feature">
-          <ion-icon name="logo-twitter"></ion-icon>
+          <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
           @dineindash_lisbon
         </div>
       </div>
-      <div class="col span-1-of-4">
+      <div class="col span-1-of-4 box">
         <img src="resources/img/san-francisco.jpg" alt="San Francisco">
-        <h2>San Francisco</h2>
+        <h3 class="cities-detail">San Francisco</h3>
         <div class="city-feature">
-          <ion-icon name="person-outline"></ion-icon>
+          <ion-icon name="person-outline" class="icon-small"></ion-icon>
           3700+ happy eaters
         </div>
         <div class="city-feature">
-          <ion-icon name="restaurant-outline"></ion-icon>
+          <ion-icon name="restaurant-outline" class="icon-small"></ion-icon>
           160+ top chefs
         </div>
         <div class="city-feature">
-          <ion-icon name="logo-twitter"></ion-icon>
+          <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
           @dineindash_sf
         </div>
       </div>
-      <div class="col span-1-of-4">
+      <div class="col span-1-of-4 box">
         <img src="resources/img/berlin.jpg" alt="Berlin">
-        <h2>Berlin</h2>
+        <h3 class="cities-detail">Berlin</h3>
         <div class="city-feature">
-          <ion-icon name="person-outline"></ion-icon>
+          <ion-icon name="person-outline" class="icon-small"></ion-icon>
           2300+ happy eaters
         </div>
         <div class="city-feature">
-          <ion-icon name="restaurant-outline"></ion-icon>
+          <ion-icon name="restaurant-outline" class="icon-small"></ion-icon>
           110+ top chefs
         </div>
         <div class="city-feature">
-          <ion-icon name="logo-twitter"></ion-icon>
+          <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
           @dineindash_berlin
         </div>
       </div>
-      <div class="col span-1-of-4">
+      <div class="col span-1-of-4 box">
         <img src="resources/img/london.jpg" alt="London">
-        <h2>London</h2>
+        <h3 class="cities-detail">London</h3>
         <div class="city-feature">
-          <ion-icon name="person-outline"></ion-icon>
+          <ion-icon name="person-outline" class="icon-small"></ion-icon>
           1200+ happy eaters
         </div>
         <div class="city-feature">
-          <ion-icon name="restaurant-outline"></ion-icon>
+          <ion-icon name="restaurant-outline" class="icon-small"></ion-icon>
           50+ top chefs
         </div>
         <div class="city-feature">
-          <ion-icon name="logo-twitter"></ion-icon>
+          <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
           @dineindash_london
         </div>
       </div>
