styled links in cities section

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
         <div class="city-feature">
           <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
-          @dineindash_lisbon
+          <a href="#" class="city-feature-link">@dineindash_lisbon</a>
         </div>
       </div>
       <div class="col span-1-of-4 box">
@@ -211,7 +211,7 @@
         </div>
         <div class="city-feature">
           <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
-          @dineindash_sf
+          <a href="#" class="city-feature-link">@dineindash_sf</a>
         </div>
       </div>
       <div class="col span-1-of-4 box">
@@ -227,7 +227,7 @@
         </div>
         <div class="city-feature">
           <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
-          @dineindash_berlin
+          <a href="#" class="city-feature-link">@dineindash_berlin</a>
         </div>
       </div>
       <div class="col span-1-of-4 box">
@@ -243,7 +243,7 @@
         </div>
         <div class="city-feature">
           <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
-          @dineindash_london
+          <a href="#" class="city-feature-link">@dineindash_london</a>
         </div>
       </div>
     </div>
