added text to customer testimonials section

--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
   </section>
 
   <!-- Cities -->
-<section class="setion-cities">
-  <div class="row">
-      <h1 class="section-cities-header">We're currently in these cities</h1>
-    </div>
+  <section class="setion-cities">
+    <div class="row">
+        <h1 class="section-cities-header">We're currently in these cities</h1>
+      </div>
     <div class="row">
       <div class="col span-1-of-4 box">
         <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
@@ -247,7 +247,46 @@
         </div>
       </div>
     </div>
+  </section>
+
+  <!-- Customer Testimonials -->
+<section class="section-testimonials">
+  <div class="row">
+    <h1 class="testimonials-header">Our customers can't live without us</h1>
+  </div>
+  <div class="row">
+    <div class="col span-1-of-3 box">
+      <blockquote>
+        Dine-In-Dash is just awesome! I just launched a startup which leaves me with no time for cooking, so Dine-In-Dash is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+      </blockquote>
+      <cite>
+        <img src="resources/img/customer-1.jpg" alt="Customer-1">
+        Alberto Duncan
+      </cite>
+    </div>
+    <div class="col span-1-of-3 box">
+      <blockquote>
+        Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+      </blockquote>
+      <cite>
+        <img src="resources/img/customer-2.jpg" alt="Customer-2">
+        Joana Silva
+      </cite>
+    </div>
+    <div class="col span-1-of-3 box">
+      <blockquote>
+        I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Dine-In-Dash. Best food delivery service in the Bay Area. Keep up the great work!
+      </blockquote>
+      <cite>
+        <img src="resources/img/customer-3.jpg" alt="Customer-3">
+        Milton Chapman
+      </cite>
+    </div>
+  </div>
 </section>
 
   </body>
 </html>
+
+<!-- 
+ -->
