--- a/index.html
+++ b/index.html
@@ -276,8 +276,115 @@
       </div>
     </section>
 
+    <!-- Sign up -->
+    <section class="section-plans">
+      <div class="row">
+        <h1 class="plans-header">Start eating healthy today</h1>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-3">
+          <div class="plan-box">
+            <div>
+              <h2>Premium</h2>
+              <p class="plan-price">399$ per month</p>
+              <p class="plan-price-meal">That’s only 13.30$ per meal</p>
+            </div>
+            <div>
+              <ul>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal 10 days/month</li>
+                <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
+                <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
+                <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+              </ul>
+            </div>
+            <div>
+              <a href="#" class="btn btn-full">Sign up now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col span-1-of-3">
+          <div class="plan-box">
+            <div>
+              <h2>Pro</h2>
+              <p class="plan-price">149$ per month</p>
+              <p class="plan-price-meal">That’s only 14.90$ per meal</p>
+            </div>
+            <div>
+              <ul>
+                <li><ion-icon name="checkmark-outline"></ion-icon>1 meal every day</li>
+                <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
+                <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
+                <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+              </ul>
+            </div>
+            <div>
+              <a href="#" class="btn btn-light">Sign up now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col span-1-of-3">
+          <div class="plan-box">
+            <div>
+              <h2>Starter</h2>
+              <p class="plan-price">19$ per meal</p>
+              <p class="plan-price-meal"></p>
+            </div>
+            <div>
+              <ul>
+                <li><ion-icon name="checkmark-outline"></ion-icon>1 meal</li>
+                <li><ion-icon name="checkmark-outline"></ion-icon>Order from 8 am to 12 pm</li>
+                <li><ion-icon name="close-outline"></ion-icon>Access to newest creations</li>
+                <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+              </ul>
+            </div>
+            <div>
+              <a href="#" class="btn btn-light">Sign up now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
 
+
 <!-- 
+  Section 6: Sign up and pricing plans
+
+Plan 2: Pro
+149$ per month
+That’s only 14.90$ per meal
+1 meal 10 days/month
+Order 24/7
+Access to newest creations
+Free delivery
+
+
+Plan 3: Starter
+19$ per meal
+1 meal
+Order from 8 am to 12 pm
+Free delivery
+Section 7: Contact form
+Title: We're happy to hear from you
+
+Fields to include:
+Name
+Email
+How did you find us?
+Newsletter
+Drop us a line
+
+Section 8: Footer
+Title: None
+
+Navigation:
+1. About us
+2. Blog
+3. Press
+4. iOS App
+5. Android App
+
+Also include links to facebook, twitter, google+ and Instagram accounts.
  -->
