added styling to sign up and plans section

--- a/index.html
+++ b/index.html
@@ -286,15 +286,15 @@
           <div class="plan-box">
             <div>
               <h2>Premium</h2>
-              <p class="plan-price">399$ per month</p>
-              <p class="plan-price-meal">That’s only 13.30$ per meal</p>
+              <p class="plan-price">$399 <span>/ month</span></p>
+              <p class="plan-price-meal">That’s only $13.30 per meal</p>
             </div>
             <div>
               <ul>
                 <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal 10 days/month</li>
-                <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
-                <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
-                <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery</li>
               </ul>
             </div>
             <div>
@@ -306,15 +306,15 @@
           <div class="plan-box">
             <div>
               <h2>Pro</h2>
-              <p class="plan-price">149$ per month</p>
-              <p class="plan-price-meal">That’s only 14.90$ per meal</p>
+              <p class="plan-price">$149 <span>/ month</span></p>
+              <p class="plan-price-meal">That’s only $14.90 per meal</p>
             </div>
             <div>
               <ul>
-                <li><ion-icon name="checkmark-outline"></ion-icon>1 meal every day</li>
-                <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
-                <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
-                <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal every day</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery</li>
               </ul>
             </div>
             <div>
@@ -326,15 +326,15 @@
           <div class="plan-box">
             <div>
               <h2>Starter</h2>
-              <p class="plan-price">19$ per meal</p>
-              <p class="plan-price-meal"></p>
+              <p class="plan-price">$19 <span>/ meal</span></p>
+              <p class="plan-price-meal">&nbsp;</p>
             </div>
             <div>
               <ul>
-                <li><ion-icon name="checkmark-outline"></ion-icon>1 meal</li>
-                <li><ion-icon name="checkmark-outline"></ion-icon>Order from 8 am to 12 pm</li>
-                <li><ion-icon name="close-outline"></ion-icon>Access to newest creations</li>
-                <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>8 am to 12 pm</li>
+                <li><ion-icon name="close-outline" class="icon-red"></ion-icon>Access to newest creations</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery</li>
               </ul>
             </div>
             <div>
