--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="vendors/css/normalize.css" rel="stylesheet" type="text/css">
     <!-- CSS Grid -->
     <link href="vendors/css/grid.css" rel="stylesheet" type="text/css">
+    <!-- Ion Icons -->
+    <link href="vendors/css/ionicons.min.css" rel="stylesheet" type="text/css">
      <!-- CSS -->
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
     <!-- Google Font -->
@@ -19,9 +21,13 @@
   </head>
   
   <body>
-    <!-- Intro -->
+    <!------------------
+      Intro
+    ------------------->
     <div class="backgroundImage">
-      <!-- Navigation Bar -->
+      <!------------------
+        Navigation Bar
+      ------------------->
       <nav>
         <div class="row">
           <img src="resources/img/logo-white.png" alt="Dine-In-Dash Logo" class="logo">
@@ -34,7 +40,9 @@
         </div>
       </nav>
 
-      <!-- Header -->
+      <!------------------
+        Header
+      ------------------->
       <header>
         <div class="hero-text-box">
           <h1 class="intro-header">Goodbye junk food.<br />Hello healthy meals.</h1>
@@ -44,7 +52,9 @@
       </header>
     </div>
 
-    <!-- Features -->
+    <!------------------
+      Features Meals
+    ------------------->
     <section class="section-features">
       <div class="row">       
         <!-- Features Header -->
@@ -87,7 +97,9 @@
       </div>
     </section>
 
-    <!-- Favorite Meals -->
+    <!------------------
+      Favorite Meals
+    ------------------->
     <section class="section-meals">
       <ul class="meals-showcase">
         <li>
@@ -148,16 +160,23 @@
       <ul class="clearfix"></ul>
     </section>
 
-    <!-- How It Works -->
+    <!------------------
+      How It Works
+    ------------------->
     <section class="section-steps">
+      <!-- How It Works Header -->
       <div class="row">
         <h1 class="section-steps-header">How it works &mdash; Simple as 1, 2, 3</h1>
       </div>
+      <!-- How It Works Detail -->
       <div class="row">
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-4">
+          <!-- <img src="resources/img/app-iPhone.png" alt="Dine-In-Dash app on Iphone" class="app-screen"> -->
+        </div>  
+        <div class="col span-1-of-4">
           <img src="resources/img/app-iPhone.png" alt="Dine-In-Dash app on Iphone" class="app-screen">
-        </div>
-        <div class="col span-1-of-2">
+        </div>        
+        <div class="col span-2-of-4">
           <div class="works-step">
             <div>1</div>
             <p>Choose the subscription plan that best fits your needs and sign up today.</p>
@@ -176,13 +195,17 @@
       </div>
     </section>
 
-    <!-- Cities -->
+    <!------------------
+      Cities
+    ------------------->
     <section class="setion-cities">
+      <!-- Cities Header -->
       <div class="row">
           <h1 class="section-cities-header">We're currently in these cities</h1>
-        </div>
-      <!-- Lisbon -->
+        </div>     
+      <!-- Cities Detail -->
       <div class="row">
+         <!-- Lisbon -->
         <div class="col span-1-of-4 box">
           <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
           <h3 class="cities-detail">Lisbon</h3>
@@ -252,39 +275,47 @@
         </div>
       </div>
     </section>
-
-    <!-- Customer Testimonials -->
+    
+    <!------------------
+      Customer Testimonials 
+    ------------------->
     <section class="section-testimonials">
+      <!-- Customer Testimonials Header -->
       <div class="row">
         <h1 class="testimonials-header">Our customers can't live without us</h1>
       </div>
+      <!-- Customer Testimonials Detail -->
       <div class="row">
-      <div class="col span-1-of-3">
-          <blockquote>
-              Dine-In-Dash is just awesome! I just launched a startup which leaves me with no time for cooking, so Dine-In-Dash is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
-              <cite><img src="resources/img/customer-1.jpg">Alberto Duncan</cite>
-          </blockquote>
-      </div>
-      <div class="col span-1-of-3">
-          <blockquote>
-              Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Dine-In-Dash. Me and my family are so in love!
-              <cite><img src="resources/img/customer-2.jpg">Joana Silva</cite>
-          </blockquote>
-      </div>
-      <div class="col span-1-of-3">
-          <blockquote>
-            I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Dine-In-Dash. Best food delivery service in the Bay Area. Keep up the great work!
-          <cite><img src="resources/img/customer-3.jpg">Milton Chapman</cite>
-          </blockquote>
-      </div>
+        <div class="col span-1-of-3">
+            <blockquote>
+                Dine-In-Dash is just awesome! I just launched a startup which leaves me with no time for cooking, so Dine-In-Dash is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                <cite><img src="resources/img/customer-1.jpg">Alberto Duncan</cite>
+            </blockquote>
+        </div>
+        <div class="col span-1-of-3">
+            <blockquote>
+                Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Dine-In-Dash. Me and my family are so in love!
+                <cite><img src="resources/img/customer-2.jpg">Joana Silva</cite>
+            </blockquote>
+        </div>
+        <div class="col span-1-of-3">
+            <blockquote>
+              I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Dine-In-Dash. Best food delivery service in the Bay Area. Keep up the great work!
+            <cite><img src="resources/img/customer-3.jpg">Milton Chapman</cite>
+            </blockquote>
+        </div>
       </div>
     </section>
 
-    <!-- Sign up -->
+    <!------------------
+      Signup and Plans 
+    ------------------->
     <section class="section-plans">
+      <!-- Signup and Plans Header -->
       <div class="row">
         <h1 class="plans-header">Start eating healthy today</h1>
       </div>
+      <!-- Signup and Plans Detail -->
       <div class="row">
         <!-- Premium -->
         <div class="col span-1-of-3">
@@ -296,7 +327,7 @@
             </div>
             <div>
               <ul>
-                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal 10 days/month</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal everyday</li>
                 <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7</li>
                 <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations</li>
                 <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery</li>
@@ -317,7 +348,7 @@
             </div>
             <div>
               <ul>
-                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>1 meal every day</li>
+                <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>10 meals/month</li>
                 <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Order 24/7</li>
                 <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Access to newest creations</li>
                 <li><ion-icon name="checkmark-outline" class="icon-small"></ion-icon>Free delivery</li>
@@ -352,11 +383,15 @@
       </div>
     </section>
 
-    <!-- Contact Form -->
+    <!------------------
+      Contact Form 
+    ------------------->
     <section class="section-form">
+      <!-- Contact Form Header -->
       <div class="row">
         <h1 class="form-header">We're happy to hear from you</h1>
       </div>
+      <!-- Contact Form Detail -->
       <div class="row">
         <form action="#" method="post" class="contact-form">
           <!-- Name -->
@@ -371,73 +406,87 @@
           <!-- Email -->
           <div class="row">
             <div class="col span-1-of-3">
-                <label for="email">Email</label>
-              </div>
-              <div class="col span-2-of-3">
-                <input type="email" name="email" id="email" placeholder="Email" required>
-              </div>
+              <label for="email">Email</label>
             </div>
-            <!-- How did you find us -->
-            <div class="row">
-              <div class="col span-1-of-3">
-                  <label for="findus">How did you find us?</label>
-                </div>
-                <div class="col span-2-of-3">
-                  <select name="findus" id="findus">
-                    <option value="friends" selected>Friends</option>
-                    <option value="search">Search Engine</option>
-                    <option value="ad">Advertisement</option>
-                    <option value="other">Other</option>
-                  </select>
-                </div>
-              </div>
-              <!-- Newsletter -->
-              <div class="row">
-                <div class="col span-1-of-3">
-                    <label for="news">Newsletter</label>
-                  </div>
-                  <div class="col span-2-of-3">
-                    <input type="checkbox" name="news" id="news" checked> Yes please!
-                  </div>
-                </div>
-                <!-- Newsletter -->
-                <div class="row">
-                  <div class="col span-1-of-3">
-                      <label for="message">Drop us a line</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                      <textarea name="message" id="message" placeholder="Your message"></textarea>
-                    </div>
-                </div>
-                <!-- Newsletter -->
-                <div class="row">
-                    <div class="col span-1-of-3">
-                        <label>&nbsp;</label>
-                    </div>
-                    <div class="col span-2-of-3">
-                      <input type="submit" value="Send it!">
-                    </div>
-                  </div>
-
+            <div class="col span-2-of-3">
+              <input type="email" name="email" id="email" placeholder="Email" required>
+            </div>
+          </div>
+          <!-- How did you find us -->
+          <div class="row">
+            <div class="col span-1-of-3">
+                <label for="findus">How did you find us?</label>
+            </div>
+            <div class="col span-2-of-3">
+              <select name="findus" id="findus">
+                <option value="friends" selected>Friends</option>
+                <option value="search">Search Engine</option>
+                <option value="ad">Advertisement</option>
+                <option value="other">Other</option>
+              </select>
+            </div>
+          </div>
+          <!-- Newsletter -->
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="news">Newsletter</label>
+            </div>
+            <div class="col span-2-of-3">
+              <input type="checkbox" name="news" id="news" checked> Yes please!
+            </div>
+          </div>
+          <!-- Newsletter -->
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="message">Drop us a line</label>
+            </div>
+            <div class="col span-2-of-3">
+              <textarea name="message" id="message" placeholder="Your message"></textarea>
+            </div>
+          </div>
+          <!-- Submit Button -->
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label>&nbsp;</label>
+            </div>
+            <div class="col span-2-of-3">
+              <input type="submit" value="Send it!">
+            </div>
+          </div>
         </form>
       </div>
     </section>
 
+    <!------------------
+      Footer
+    ------------------->
+    <footer>
+      <div class="row">
+        <!-- Footer Navigation -->
+        <div class="col span-2-of-2">
+          <ul class="footer-nav">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">iOS App</a></li>
+            <li><a href="#">Android App</a></li>
+            <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+          </ul>
+        </div>
+        <!-- Social Media -->
+        <!-- <div class="col span-1-of-2">
+          <ul class="social-links">
+            <li>hello</li>
+            <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-google"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+          </ul>
+        </div> -->
+      </div>
+      <div class="row">
+        <p>Copyright &copy; 2021 by Zenia Gist. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
-
-
-<!-- 
-
-Section 8: Footer
-Title: None
-
-Navigation:
-1. About us
-2. Blog
-3. Press
-4. iOS App
-5. Android App
-
-Also include links to facebook, twitter, google+ and Instagram accounts.
- -->
