added css media for smaller devices

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="vendors/css/grid.css" rel="stylesheet" type="text/css">
     <!-- Ion Icons -->
     <link href="vendors/css/ionicons.min.css" rel="stylesheet" type="text/css">
+    <!-- CSS -->
+    <link href="resources/css/queries.css" rel="stylesheet" type="text/css">
      <!-- CSS -->
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
     <!-- Google Font -->
@@ -169,14 +171,8 @@
         <h1 class="section-steps-header">How it works &mdash; Simple as 1, 2, 3</h1>
       </div>
       <!-- How It Works Detail -->
-      <div class="row">
-        <div class="col span-1-of-4">
-          <!-- <img src="resources/img/app-iPhone.png" alt="Dine-In-Dash app on Iphone" class="app-screen"> -->
-        </div>  
-        <div class="col span-1-of-4">
-          <img src="resources/img/app-iPhone.png" alt="Dine-In-Dash app on Iphone" class="app-screen">
-        </div>        
-        <div class="col span-2-of-4">
+      <div class="row">                
+        <div class="col span-3-of-4">
           <div class="works-step">
             <div>1</div>
             <p>Choose the subscription plan that best fits your needs and sign up today.</p>
@@ -192,6 +188,9 @@
           <a href="#" class="btn-app"><img src="resources/img/download-app.svg" alt="App Store Button"></a>
           <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Google Play Store Button"></a>
         </div>
+        <div class="col span-1-of-4">
+          <img src="resources/img/app-iPhone.png" alt="Dine-In-Dash app on Iphone" class="app-screen">
+        </div> 
       </div>
     </section>
 
@@ -488,5 +487,10 @@
         <p>Copyright &copy; 2021 by Zenia Gist. All rights reserved.</p>
       </div>
     </footer>
+
+    <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+    <script src="//cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
+
   </body>
 </html>
