--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
       <!------------------
         Navigation Bar
       ------------------->
-      <nav>
+      <nav class="sticky">
         <div class="row">
           <img src="resources/img/logo-white.png" alt="Dine-In-Dash Logo" class="logo">
+          <img src="resources/img/logo.png" alt="Dine-In-Dash Logo" class="logo-black">
           <ul class="main-nav">
             <li><a href="#">Food delivery</a></li>
             <li><a href="#">How it works</a></li>
             <li><a href="#">Our cities</a></li>
             <li><a href="#">Sign up</a></li>
           </ul>
+          <br>
         </div>
       </nav>
 
