added js library to make navigation bar sticky

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!------------------
         Navigation Bar
       ------------------->
-      <nav class="sticky">
+      <nav>
         <div class="row">
           <img src="resources/img/logo-white.png" alt="Dine-In-Dash Logo" class="logo">
           <img src="resources/img/logo.png" alt="Dine-In-Dash Logo" class="logo-black">
@@ -60,7 +60,7 @@
     <!------------------
       Features Meals
     ------------------->
-    <section class="section-features">
+    <section class="section-features js--section-features">
       <div class="row">       
         <!-- Features Header -->
         <h1 class="features-header">Get food fast &mdash; not fast food.</h1>
@@ -496,6 +496,7 @@
     <script src="//cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
     <script src="/resources/js/script.js"></script>
+   <script src="/vendors/js/jquery.waypoints.min.js"></script>
 
   </body>
 </html>
